2 Feb Memory functions added

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@
     line-height: 3;
     font-size: large;
     width: 100%;
-    direction: rtl;
+    text-align: right;
 }
 
 #operation_display{
