--- a/style.css
+++ b/style.css
@@ -36,8 +36,7 @@ html{
 #back-to-top-btn {
     display: block;
     position: fixed;
-    margin-bottom: 0px;
-    margin-left: 0px;
+    bottom: 0px;
 }
 
 .about_us_border {
