--- a/assignment3/style.css
+++ b/assignment3/style.css
@@ -62,7 +62,8 @@ html {
     width: 100px;
 }
 
-#display_image, #edit_display_image {
+#display_image,
+#edit_display_image {
     height: 100px;
     width: 100px;
     margin-left: -10rem;
